BCU-110: Fix collapsed block section in FF

--- a/style/zoom.css
+++ b/style/zoom.css
@@ -20,6 +20,7 @@
     height: 0 !important;
     overflow: hidden;
     margin-left: 0;
+    display: none;
 }
 .zoomin #region-main, .zoomin #region-bs-main-and-pre {
     width: 100% !important;
